tests/snapshots/integration_tests__middleware_custom_counter-2.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 11363026407312551946,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 14438613425246606436,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 8075367498276720137,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Counter,
                Key {
                    name: KeyName(
                        "counter",
                    ),
                    labels: [],
                    hashed: false,
                    hash: 0,
                },
            ),
            None,
            None,
            Counter(
                1,
            ),
        ),
    ],
)
