tests/snapshots/integration_tests__middleware_custom_counter.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Gauge,
                Key {
                    name: KeyName(
                        "http.server.active_requests",
                    ),
                    labels: [
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "url.scheme",
                            "http",
                        ),
                    ],
                    hashed: true,
                    hash: 1764143306982493858,
                },
            ),
            None,
            Some(
                "Number of active HTTP server requests.",
            ),
            Gauge(
                0.0,
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/health_check",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 5990597467953358838,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/health_check",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 2600836401908725443,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/health_check",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 13440850375894204968,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
