tests/snapshots/integration_tests__middleware_excludes.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_requests_duration_seconds",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 8295931754385516202,
                },
            ),
            None,
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Counter,
                Key {
                    name: KeyName(
                        "http_requests_total",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 11524003073089476944,
                },
            ),
            None,
            Some(
                "Total number of HTTP requests",
            ),
            Counter(
                1,
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_request_size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 10794684138722550338,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_response_size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 2422584779787545555,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
