tests/snapshots/integration_tests__middleware_with_size_metrics.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_requests_duration_seconds",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 8295931754385516202,
                },
            ),
            None,
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Counter,
                Key {
                    name: KeyName(
                        "http_requests_total",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 11524003073089476944,
                },
            ),
            None,
            Some(
                "Total number of HTTP requests",
            ),
            Counter(
                1,
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_request_size_bytes",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 7822313664249675322,
                },
            ),
            None,
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_response_size_bytes",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 16926230130245221912,
                },
            ),
            None,
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    13.0,
                ],
            ),
        ),
    ],
)
